<resources>
    <!--menu/general-->
    <string name="app_name" translatable="false">Palace Card Game</string>
    <string name="card_item">card item</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="settings">Settings</string>
    <string name="history">Records</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="title_menu" translatable="false">Palace</string>
    <string name="apply">Apply</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="color_illustration">Color Illustration</string>
    <string name="help">Help</string>
    <!--settings-->
    <string name="nickname">Nickname</string>
    <string name="use_joker">Use Joker?</string>
    <string name="deck">Deck</string>
    <string name="rules">Rules</string>
    <string name="settings_default">Default</string>
    <string name="settings_custom">Custom</string>
    <string name="settings_4_player">4-Player Mode</string>
    <string name="settings_4_player_description">Play with double of players and double deck</string>
    <string name="settings_burn_pile">Burn Pile:</string>
    <string name="settings_burn_pile_description">Default is 10</string>
    <string name="settings_reset_value">Reset Value:</string>
    <string name="settings_reset_value_description">Default is 2</string>
    <string name="settings_force_down">Force Lower Value:</string>
    <string name="settings_force_down_description">Default is 7</string>
    <string name="settings_reverse">Reverse Direction:</string>
    <string name="settings_reverse_description">Default is Joker or 8 (depending on if option "User Joker" is on or not)</string>
    <string name="msg_multiple_effect_same_card">Cannot a card has multiple effects. Check and try again.</string>
    <string name="wildcards_as_special">Wildcards as Special</string>
    <string name="confirm_reset">Are you sure you want to reset the settings?</string>
    <!--history-->
    <string name="first">st</string>
    <string name="second">nd</string>
    <string name="third">rd</string>
    <string name="ordinal">th</string>
    <string name="matches">matches</string>
    <string name="wins">wins</string>
    <string name="confirm_exit">Are you sure you want to exit this match?</string>
    <!--game-->
    <string name="game_start">Game Start</string>
    <string name="turn">Turn:</string>
    <string name="bot_turn">Turn: Bot</string>
    <string name="winner">Winner:</string>
    <string name="bot_winner">Winner: Bot</string>
    <string name="confirm_choice">Confirm choice</string>
    <string name="choose_your_cards">Choose your cards</string>
    <!--help-->
    <string name="help_tittle">How To Play</string>
    <string name="next">next &gt;</string>
    <string name="previous">&lt; previous</string>
    <string name="game_objective">O jogo de cartas Palace (também conhecido como Shithead) é um jogo em que você joga suas cartas em uma pilha de descarte em ordem crescente (exceto por alguns coringas).\n\nO primeiro jogador a ficar sem cartas vence.</string>
    <string name="game_setup">The game itself distribute cards for the players.\n\nEach player receive 9 cards: 3 face down (no one can see these cards), 3 face up (everyone sees what card is) and 3 on hands (each player can see what is in their hand).\n\nBefore starting to play, you may change your cards which is face up on the table with that is in your hands.\n\nGenerally, players switch cards which face up to be strong cards than your hand, making easier by the moment you begin to play this cards.</string>
    <string name="starting_the_game">The first player choose any card to discard.  Then second player plays a card that is equal to or of higher value than the discarded card by placing that card on top of discard pile. Next player will do the same as second, and so on.\n\nYou can play multiple cards in your turn, with same number or letter, as long as they\'re all equal to or higher and of the same rank.\n\nIf you don\'t have any card that attends the criteria, you have play any card to pick up the discard pile and add it to your hand.\n\nOn their turn a player can play any wildcard, which applies some condition in game (see Wildcards section).\n\nIf four of the same values are played in a row, either by one player or multiple players, it clears the discard pile, and the next player can play any card from their hand.\n\nGame continues around the table until the Draw pile is depleted.</string>
    <string name="ending_the_game">Once the Draw pile is depleted players rely solely on the cards in their hand, keep playing until there are no cards left in your hand.\n\nIf you can\'t play on your turn, you still have to pick up the discard pile and put it in your hand.\n\nOnce you pick up the discard pile, you must play all of those cards in your hands before playing from your cards on the table.\n\nWhen it\'s your turn, and you don\'t have cards in your hand, you can play one card from your face-up cards in front of you.\n\nWhen it\'s your turn and you\'ve played all your face-up cards, pick a card that\'s face-down on the table.\n\nIf it plays on the current card by not being equal nor higher, and is not RESET wildcard, you will pick up the discard pile.\n\nIf you pick up the discard pile, you must play those before continuing to play your face-down cards.\n\nWhen any player is out of cards, the game finishes and the position of the game will be determined according to how many cards each player left (in ascending order).</string>
    <string name="card_ranking">Lower to higher, from left to right:\n\n2 &#8211; 3 &#8211; 4 &#8211; 5 &#8211; 6 &#8211; 7 &#8211; 8 &#8211; 9 &#8211; 10 &#8211; J &#8211; Q &#8211; K &#8211; A\n\nRESET card plays independently (default is 2).</string>
    <string name="wildcards">Wildcards works differently of the rest of cards.\n\nDepending of your settings, it also doesn\'t consider their values.\n\nRESET wildcards: these cards reset the value on top of discard pile. Default is 2.\n\nBURN wildcards: these cards remove all discarded cards from the game, until a new game is started. Also, it gives the player another play after this action. Default is 10.\n\nFORCE LOWER wildcards: these cards forces the next player uses a card with equal or lower value, instead of equal or greater value. Default is 7.\n\nREVERSE wildcards: these cards reverses play order. If one is played again, the play order back to standard. Default is Joker, but if the game is played without it, is 8.</string>
    <string name="game_customization">You can customize your game, due to some variations of playing Palace.\n\nYou can change the deck, include Joker or not, play with one or two decks, and consider wildcards as special cards (when it\'s not considered their values).\n\nYou can change the wildcard values as well, but it is not recommended when you are learning or want play a legitimate Palace game. However, you can do it if you want to play your "own Palace game", just for fun.\n\nYou can reset the preferences anytime.</string>
    <!--multiplayer-->
    <string name="auth_failed">Failed to connect to server</string>
    <string name="lobby_room_label">Room</string>
    <string name="lobby_room_members">Members</string>
    <string name="lobby_room_status">Status</string>
    <string name="lobby_room_details">Room details</string>
    <string name="lobby_room_settings">Room settings</string>
    <string name="start">Start</string>
    <string name="leave">Leave</string>
    <string name="enter_password">Password (blank means public)</string>
    <string name="new_room">New room</string>
    <string name="join_room">Join room</string>
    <string name="rooms">Rooms</string>
    <string name="create_room">Create room</string>
    <string name="room_created">Room successfully created</string>
    <string name="room_failed">Room creation failed</string>
    <string name="dialog_room_name">Room Name:</string>
    <string name="dialog_password">Password:</string>
    <string name="dialog_option_blank">can be blank if public room</string>
    <string name="dialog_room_name_hint">input room name here</string>
    <string name="double_arrow">double_arrow</string>
    <string name="password_fail">Invalid password</string>
    <string name="join">Join</string>
    <string name="room_full">Room is full</string>
    <!--string arrays-->
    <string-array name="help_topics_array">
        <item>Game Objective</item>
        <item>Setup your Game</item>
        <item>Starting the game</item>
        <item>Ending the Game</item>
        <item>Card Ranking</item>
        <item>WildCards</item>
        <item>Game Customization</item>
    </string-array>
    <string-array name="decks_array">
        <item>blue</item>
        <item>red</item>
        <item>farwest</item>
        <item>nature</item>
        <item>tech</item>
        <item>royal</item>
    </string-array>
    <string-array name="cards_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>J</item>
        <item>Q</item>
        <item>K</item>
        <item>A</item>
        <item>Joker</item>
    </string-array>
</resources>