<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SettingsActivity"
        android:background="@drawable/card_games"
        android:backgroundTint="@color/green_table_start"
        android:backgroundTintMode="add">

    <TextView
            android:text="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nickname"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="24dp"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:text="Player"
            android:ems="12"
            android:id="@+id/et_nickname"
            app:layout_constraintTop_toTopOf="@id/tv_nickname"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
            app:layout_constraintStart_toEndOf="@id/tv_nickname"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp"
            android:hint="@string/nickname"/>

    <TextView
            android:text="@string/deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_deck"
            android:layout_margin="24dp"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/et_nickname"
            app:layout_constraintTop_toTopOf="@id/et_nickname"
            app:layout_constraintBottom_toBottomOf="@id/et_nickname"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_deck"
            app:layout_constraintStart_toEndOf="@id/tv_deck"
            app:layout_constraintTop_toTopOf="@id/tv_deck"
            app:layout_constraintBottom_toBottomOf="@id/tv_deck"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"/>

    <TextView
            android:text="@string/use_joker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_use_joker"
            android:layout_margin="16dp"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="68dp"/>

    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tb_use_joker"
            app:layout_constraintStart_toEndOf="@id/tv_use_joker"
            app:layout_constraintBottom_toBottomOf="@id/tv_use_joker"
            app:layout_constraintTop_toTopOf="@id/tv_use_joker"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            style="@style/menu_button"/>

    <CheckBox
            android:text="@string/settings_4_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_4_player"
            app:layout_constraintStart_toEndOf="@id/tb_use_joker"
            app:layout_constraintTop_toTopOf="@id/tv_use_joker"
            app:layout_constraintBottom_toBottomOf="@id/tv_use_joker"
            android:layout_marginStart="8dp"
            android:tooltipText="@string/settings_4_player_description"/>

    <TextView
            android:text="@string/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rules"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="24dp"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_use_joker"
            android:layout_marginStart="32dp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_rules"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/tv_rules"
            app:layout_constraintBottom_toBottomOf="@id/tv_rules"
            android:orientation="horizontal"
            android:id="@+id/rg_rules">

        <RadioButton
                android:text="@string/settings_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_default"
                android:textColor="@color/dark_gray"/>

        <RadioButton
                android:text="@string/settings_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_custom"
                android:textColor="@color/dark_gray"
                android:layout_marginStart="8dp"/>
    </RadioGroup>

    <CheckBox
            android:text="@string/wildcards_as_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_wildcard_special"
            app:layout_constraintStart_toEndOf="@+id/rg_rules"
            app:layout_constraintTop_toTopOf="@id/tv_rules"
            app:layout_constraintBottom_toBottomOf="@id/tv_rules"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/settings_burn_pile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_burn_pile"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_rules"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:tooltipText="@string/settings_burn_pile_description"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_burn_pile"
            app:layout_constraintStart_toEndOf="@id/tv_burn_pile"
            app:layout_constraintTop_toTopOf="@id/tv_burn_pile"
            app:layout_constraintBottom_toBottomOf="@id/tv_burn_pile"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"/>

    <TextView
            android:text="@string/settings_reset_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reset_value"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_rules"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/sp_burn_pile"
            android:tooltipText="@string/settings_reset_value_description"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_reset"
            app:layout_constraintStart_toEndOf="@id/tv_reset_value"
            app:layout_constraintTop_toTopOf="@id/tv_reset_value"
            app:layout_constraintBottom_toBottomOf="@id/tv_reset_value"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"/>

    <TextView
            android:text="@string/settings_force_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_force_down"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_burn_pile"
            app:layout_constraintStart_toStartOf="parent"
            android:tooltipText="@string/settings_force_down_description"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_force_down"
            app:layout_constraintStart_toEndOf="@id/tv_force_down"
            app:layout_constraintTop_toTopOf="@id/tv_force_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_force_down"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"/>

    <TextView
            android:text="@string/settings_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reverse"
            android:textColor="@color/dark_gray"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_burn_pile"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/sp_force_down"
            android:tooltipText="@string/settings_reverse_description"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_reverse"
            app:layout_constraintStart_toEndOf="@id/tv_reverse"
            app:layout_constraintTop_toTopOf="@id/tv_reverse"
            app:layout_constraintBottom_toBottomOf="@id/tv_reverse"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"/>

    <Button
            android:text="@string/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_apply"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_reset"/>

    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/menu_button"
            app:layout_constraintStart_toEndOf="@id/btn_apply"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_nickname"
            android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>