<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MenuActivity"
        android:background="@drawable/card_games">

    <Button
            android:text="@string/singleplayer"
            android:id="@+id/singleplayer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/history"
            app:layout_constraintEnd_toStartOf="@id/multiplayer"
            android:drawableStart="@drawable/ic_user_crown"
            style="@style/menu_button"/>

    <Button
            android:text="@string/history"
            android:id="@+id/history"
            app:layout_constraintTop_toBottomOf="@+id/singleplayer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings"
            android:drawableStart="@drawable/ic_history"
            style="@style/menu_button"/>

    <Button
            android:text="@string/multiplayer"
            android:id="@+id/multiplayer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/singleplayer"
            app:layout_constraintBottom_toTopOf="@id/settings"
            android:drawableStart="@drawable/ic_users_crown"
            style="@style/menu_button"/>

    <Button
            android:text="@string/settings"
            android:id="@+id/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/history"
            app:layout_constraintTop_toBottomOf="@+id/multiplayer"
            android:drawableStart="@drawable/ic_settings"
            style="@style/menu_button"/>

    <TextView
            android:text="@string/title_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/menu_title"
            android:fontFamily="cursive"
            tools:ignore="TextContrastCheck"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_help"
            android:id="@+id/ivHelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:tint="@color/black"
            android:contentDescription="@string/help"/>

</androidx.constraintlayout.widget.ConstraintLayout>