<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:layout_margin="8dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_room_name"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_room_name_label"
            android:layout_margin="16dp"/>

    <EditText
            android:id="@+id/et_new_room_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/tv_room_name_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_room_name_label"
            app:layout_constraintStart_toEndOf="@+id/tv_room_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:hint="@string/dialog_room_name_hint"
            android:textColorHint="@color/red33"
            android:inputType="text"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_password"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_room_name_label"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tv_room_password_label"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"/>

    <EditText
            android:id="@+id/et_new_room_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/tv_room_password_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_room_password_label"
            app:layout_constraintStart_toEndOf="@+id/tv_room_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:hint="@string/dialog_option_blank"
            android:textColorHint="@color/red33"
            android:inputType="textPassword"/>
    <Button
            android:text="@string/create_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_create_room"
            style="@style/menu_button"
            app:layout_constraintTop_toBottomOf="@id/et_new_room_password"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>