<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HelpActivity"
        android:background="@drawable/simple_table">

    <TextView
            android:text="@string/help_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHelpTittle"
            style="@style/menu_title"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPrevious"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sp_help_header"
            app:layout_constraintTop_toTopOf="@+id/sp_help_header"
            app:layout_constraintBottom_toBottomOf="@+id/sp_help_header"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_help_header"
            app:layout_constraintStart_toEndOf="@+id/tvPrevious"
            app:layout_constraintEnd_toStartOf="@+id/tvNext"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorPrimary"
            android:gravity="center"
            android:minHeight="48dp"
            android:entries="@array/help_topics_array"
            app:layout_constraintTop_toBottomOf="@+id/tvHelpTittle"/>

    <TextView
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNext"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/sp_help_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sp_help_header"
            app:layout_constraintBottom_toBottomOf="@+id/sp_help_header"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_help_header"
            android:background="@color/disabled"
            android:id="@+id/scrollView2">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    tools:text="@string/game_objective"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_help_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>